# artgen-backend-rust

./: .gitignore  Cargo.toml  README.md  best.json  build.sh  ff.best.json  ff.json  flamegraph.sh  mona.best.json
benches/: bench.rs
src/: buffer_dimensions.rs  engine.rs  evaluator.rs  gpu_pipeline.rs  lib.rs  main.rs  settings.rs  texture_wrapper.rs  utils.rs
src/models/: color.rs  drawing.rs  line.rs  mod.rs  point.rs  polygon.rs
