[package]
name = "artgen-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.17.1", features = ["derive"] }
divan = "0.1.14"
futures = "0.3.30"
futures-intrusive = "0.5.0"
futures-lite = "2.3.0"
image = "0.25.2"
num_cpus = "1.16.0"
rand = "0.8.5"
sdl2 = "0.37.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
wgpu = "22.1.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = true
codegen-units = 1
rpath = true

[profile.bench]
inherits = "release"
